--- a/view/public/index.html
+++ b/view/public/index.html
@@ -8,6 +8,7 @@
         <meta name='description' content='Frostlake' />
         <link rel='apple-touch-icon' href='%PUBLIC_URL%/logo192.png' />
         <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css">
         <title>Frostlake</title>
     </head>
     <body>
