--- a/view/src/sass/index.sass
+++ b/view/src/sass/index.sass
@@ -1,8 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap")
 
 $navColor: #191919
-$primaryGradient: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%)
-$primaryColor: #009ffd
+$primaryColor: #191919
 $white : #fdfdfb
 $inputColor: #f7f7f7
 
@@ -44,7 +43,7 @@ body
     border-radius: 0px
  
     &-header   
-        background: $primaryGradient
+        background: $primaryColor
 
 .jumbotron 
     margin-top: 2rem
@@ -94,7 +93,7 @@ body
 
 .btn
     border: none
-    background: $primaryGradient
+    background: $primaryColor
     font-weight: bold
     border-radius: 50px
     padding-top: 0.7rem
