--- a/view/src/sass/index.sass
+++ b/view/src/sass/index.sass
@@ -2,8 +2,8 @@
 
 $navColor: #191919
 $primaryColor: #191919
-$white : #fdfdfb
-$inputColor: #f7f7f7
+$white : #ffffff
+$inputColor: #f7f7f7f3
 
 html 
     scrollbar-width: none
@@ -191,11 +191,10 @@ textarea:focus
 .navbar 
     background-color: $navColor
     z-index: 2
-    font-weight: bold
     padding: 1.35rem
     
 .navbar-brand
-    font-size: 90%
+    font-size: 100%
 
 .navbar-toggler:focus,
 .navbar-toggler:active,
