--- a/view/src/App.sass
+++ b/view/src/App.sass
@@ -12,7 +12,7 @@ html
     width: 0px
 
 body 
-    background: linear-gradient(to right, rgba(26, 25, 31, 0.7), rgba(26, 25, 31, 0.7)), url(../landing/landing.jpg)
+    background: linear-gradient(to right, rgba(26, 25, 31, 0.7), rgba(26, 25, 31, 0.7)), url(./landing/landing.jpg)
     -webkit-background-size: cover
     -moz-background-size: cover
     -o-background-size: cover
